# careers-website

./: app.py  database.py  pyproject.toml  requirements.txt
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
templates/: application_form.html  application_submitted.html  banner.html  bootstrap.html  footer.html  home.html  jobdata.html  jobpage.html  nav.html
