[tool.poetry]
name = "careers-website"
version = "0.1.0"
description = ""
authors = ["Muhammad Faizan <92922891+Immuhammadfaizan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
